; ModuleID = '/home/carl/AnghaBench/RetroArch/audio/drivers/extr_rwebaudio.c_rwebaudio_init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/audio/drivers/extr_rwebaudio.c_rwebaudio_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32, i32, i32, i32*)* @rwebaudio_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @rwebaudio_init(i8* %0, i32 %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %12 = load i32, i32* %8, align 4
  %13 = call i8* @RWebAudioInit(i32 %12)
  store i8* %13, i8** %11, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i32, i32* %7, align 4
  %16 = load i8*, i8** %11, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %18, label %21

18:                                               ; preds = %5
  %19 = call i32 (...) @RWebAudioSampleRate()
  %20 = load i32*, i32** %10, align 8
  store i32 %19, i32* %20, align 4
  br label %21

21:                                               ; preds = %18, %5
  %22 = load i8*, i8** %11, align 8
  ret i8* %22
}

declare dso_local i8* @RWebAudioInit(i32) #1

declare dso_local i32 @RWebAudioSampleRate(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
